[gd_scene load_steps=13 format=3 uid="uid://b2fmefqynrlnp"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://4fwkmdgg74n7" path="res://enemy/enemy.png" id="2"]
[ext_resource type="Texture2D" uid="uid://brfjfy4nv8xq8" path="res://player/bullet.png" id="3"]

[sub_resource type="Animation" id="1"]
resource_name = "explode"
length = 5.0
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.29),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 180.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.11, 2.74),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.38),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:process_material:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.99, 2.31),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 4.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SoundHit:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.00999999),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SoundExplode:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.75),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.28),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="2"]
length = 6.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5, 2.25, 3, 3.75, 4.5, 5.25, 6, 6.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 5, 6, 5, 6, 7, 6, 7, 5]
}

[sub_resource type="Animation" id="3"]
resource_name = "walk"
length = 1.25
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4iqjc"]
_data = {
"explode": SubResource("1"),
"idle": SubResource("2"),
"walk": SubResource("3")
}

[sub_resource type="CanvasItemMaterial" id="4"]

[sub_resource type="CapsuleShape2D" id="5"]
radius = 7.1001
height = 14.2002

[sub_resource type="CanvasItemMaterial" id="6"]
blend_mode = 1

[sub_resource type="ParticleProcessMaterial" id="7"]
gravity = Vector3(0, 98, 0)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(54.749, 34.0604)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Enabler" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(16.2569, 11.0034)
scale = Vector2(23.5056, 10.8629)

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4iqjc")
}

[node name="Anim2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4iqjc")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("4")
texture = ExtResource("2")
flip_h = true
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.00525069, -0.727495)
rotation = -1.5708
shape = SubResource("5")

[node name="DetectFloorLeft" type="RayCast2D" parent="."]
position = Vector2(-33.2868, -9.34363)
target_position = Vector2(0, 45)

[node name="DetectWallLeft" type="RayCast2D" parent="."]
position = Vector2(-12.1361, -0.739977)
rotation = 1.5708
target_position = Vector2(0, 20)

[node name="DetectWallRight" type="RayCast2D" parent="."]
position = Vector2(3.2788, -0.381488)
rotation = -1.5708
target_position = Vector2(0, 20)

[node name="DetectFloorRight" type="RayCast2D" parent="."]
position = Vector2(29.1987, -9.34363)
target_position = Vector2(0, 45)

[node name="Explosion" type="GPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.12)
material = SubResource("6")
emitting = false
amount = 32
process_material = SubResource("7")
texture = ExtResource("3")
lifetime = 0.5
one_shot = true
speed_scale = 1.2
explosiveness = 0.1

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]

[node name="SoundExplode" type="AudioStreamPlayer2D" parent="."]

[node name="StompDetector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color(0.337255, 0.772549, 0.0352941, 1)
shape = SubResource("8")

[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
